Fixed Event Post Margins
Summary: Mobile margins and event-post messed up margins, fixed in this branch

Test Plan: check margins in event show view for posts

Reviewers: piccoloman

Reviewed By: piccoloman

Projects: #ashby

Differential Revision: http://phab.calblueprint.org/D534

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -198,6 +198,11 @@
   .no-row-margin {
     margin: 0 !important;
   }
+
+  .event-post {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
 }
 
 @media (min-width: 41em) {
@@ -207,5 +212,8 @@
   }
   .event-left {
     padding-left: 16px;
+  }
+  .event-post {
+    margin-top: 16px;
   }
 }
